<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Archive Manager</string>
    <string name="compress">Compress</string>
    <string name="decompress">Decompress</string>
    <string name="msg_ret_success">Success</string>
    <string name="msg_ret_warning">Warning (Non fatal error(s))</string>
    <string name="msg_ret_fault">Fatal error</string>
    <string name="msg_ret_command">Command line error</string>
    <string name="msg_ret_memmory">Not enough memory for operation</string>
    <string name="msg_ret_user_stop">User stopped the process</string>
    <string name="achieve_output_path">Achieve output path</string>
    <string name="choose_more">More</string>
    <string name="achieve_name">Achieve name</string>
    <string name="password">Password</string>
    <string name="show_password">Show Password</string>
    <string name="input_password">Input password</string>
    <string name="decompress_output_path">Decompress output path</string>
    <string name="decompress_file_name">Decompress file name</string>
    <string name="confirm">OK</string>
    <string name="cancel">Cancel</string>
    <string name="parent_folder">Parent folder</string>
    <string name="source_file">Source file</string>
    <string name="path_not_exist">Path is not exist.</string>
    <string name="path_not_directory">Path is not directory.</string>
    <string name="path_not_permission">Path has no write permission.</string>
    <string name="file_name_not_null">File name must not be null.</string>
    <string name="file_name_illegal">File name has illegal character /</string>
    <string name="file_name_warning">Warning:\nAvoid containing these chractors: @ # $ ^ &amp; * ( ) [ ].\nDo you determine use this file name?</string>
    <string name="compress_info">Do in progress...</string>
    <string name="filename_aready_exists">This file name is aready exists, please re-input.</string>
    <string name="hint_input_password">Encrypted file.\nPlease enter password.</string>
    <string name="hint_wrong_password">Password is incorrect.\nPlease re-enter password.</string>
    <string name="dialog_decompress_text">"%1$s" is already exists at Desktop, whether to decompress (which will cover the duplicate file)?</string>
    <string name="exit_promt">Are you sure you want to exit?</string>
    <string name="hint_no_permission">You have no operating authority in destination path.</string>
    <string name="browse">Browse</string>
    <string name="extract">Extract</string>
    <string name="extract_all">Extract All</string>
    <string name="add">Add</string>
    <string name="current_path">Current Path:</string>
    <string name="name">Name</string>
    <string name="size">Size</string>
    <string name="compressed_size">Compressed Size</string>
    <string name="type">Type</string>
    <string name="modified_time">Modified Time</string>
    <string name="count">Total:</string>
    <string name="file">File</string>
    <string name="files">Files</string>
    <string name="folder">Folder</string>
    <string name="folders">Folders</string>
    <string name="str_byte">B</string>
    <string name="empty_str"></string>
    <string name="one_space"> </string>
    <string name="char_zero">0</string>

    <string-array name="simple_compress_type">
        <item>.zip</item>
        <item>.7z</item>
        <item>.tar</item>
    </string-array>

    <string-array name="complex_compress_type">
        <item>.tar.gz</item>
        <item>.tar.bz2</item>
    </string-array>
</resources>
