<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_padding">

    <ListView
        android:id="@+id/lv_compress_file"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />

    <EditText
        android:id="@+id/et_co_destination"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/item_height"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/lv_compress_file"
        android:layout_toLeftOf="@+id/bt_co_destination"
        android:ems="10"
        android:hint="@string/achieve_output_path"
        android:singleLine="true" />

    <Button
        android:id="@+id/bt_co_destination"
        android:layout_width="@dimen/item_height"
        android:layout_height="@dimen/item_height"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/lv_compress_file"
        android:text="@string/choose_more" />

    <EditText
        android:id="@+id/et_co_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/et_co_destination"
        android:layout_toLeftOf="@+id/sp_co_type"
        android:ems="10"
        android:hint="@string/achieve_name"
        android:singleLine="true" />

    <Spinner
        android:id="@+id/sp_co_type"
        android:layout_width="60dp"
        android:layout_height="@dimen/item_height"
        android:layout_below="@+id/et_co_destination"
        android:layout_alignParentRight="true"
        android:entries="@array/array_compress_type" />

    <CheckBox
        android:id="@+id/cb_co_passwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/et_co_name"
        android:checked="false"
        android:text="@string/password" />

    <CheckBox
        android:id="@+id/cb_co_passwd_visib"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/item_height"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/et_co_name"
        android:text="@string/show_password"
        android:visibility="gone" />

    <EditText
        android:id="@+id/et_co_passwd"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/item_height"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/cb_co_passwd"
        android:ems="10"
        android:hint="@string/input_password"
        android:inputType="textPassword"
        android:singleLine="true"
        android:visibility="gone" />

    <Button
        android:id="@+id/bt_co_compress"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/et_co_passwd"
        android:text="@string/compress" />
</RelativeLayout>
