<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ArchiveBrowserActivity">

    <LinearLayout
        android:id="@+id/ll_tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="#F4F4F4"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="8dp">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="48dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/bg_bt_back"
            android:padding="5dp"
            android:src="@mipmap/back" />

        <ImageView
            android:id="@+id/img_forward"
            android:layout_width="48dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="15dp"
            android:background="@drawable/bg_bt_forward"
            android:padding="5dp"
            android:src="@mipmap/forward" />

        <ImageView
            android:id="@+id/img_home"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginRight="10dp"
            android:src="@mipmap/home" />

        <Button
            android:id="@+id/bt_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"
            android:background="@drawable/bg_null_stroke_gray004_corner_5dp"
            android:inputType="text"
            android:paddingBottom="5dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="5dp"
            android:text="@string/add"
            android:textColor="@color/black"
            android:textSize="12sp"/>

        <Button
            android:id="@+id/bt_extract"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"
            android:background="@drawable/bg_null_stroke_gray004_corner_5dp"
            android:inputType="text"
            android:paddingBottom="5dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="5dp"
            android:text="@string/extract"
            android:textColor="@color/black"
            android:textSize="12sp"/>

        <Button
            android:id="@+id/bt_extract_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"
            android:background="@drawable/bg_null_stroke_gray004_corner_5dp"
            android:inputType="text"
            android:paddingBottom="5dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="5dp"
            android:text="@string/extract_all"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:maxLines="1"
            android:padding="5dp"
            android:text="@string/current_path"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_current_dir"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="12dp"
            android:layout_weight="1"
            android:background="@drawable/bg_null_stroke_gray004_corner_5dp"
            android:ellipsize="start"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:paddingBottom="3dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingTop="3dp"
            android:singleLine="true"
            android:text="@string/empty_str"
            android:textSize="14sp" />

        <Button
            android:id="@+id/img_search"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@mipmap/search"
            android:visibility="gone" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@id/ll_tab"
        android:background="#cccccc" />

    <LinearLayout
        android:id="@+id/ll_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_tab"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1.5"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:text="@string/name"
            android:textColor="@color/gray_heavy" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:padding="5dp"
            android:text="@string/size"
            android:textColor="@color/gray_heavy" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:padding="5dp"
            android:text="@string/compressed_size"
            android:textColor="@color/gray_heavy" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:padding="5dp"
            android:text="@string/type"
            android:textColor="@color/gray_heavy" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1.5"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:padding="5dp"
            android:text="@string/modified_time"
            android:textColor="@color/gray_heavy" />
    </LinearLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@id/ll_bar"
        android:background="@color/gray_medium" />

    <LinearLayout
        android:id="@+id/ll_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/gray_light"
        android:gravity="center"
        android:paddingBottom="8dp"
        android:paddingTop="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:maxLines="1"
            android:text="@string/count"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_dirs_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:maxLines="1"
            android:text="@string/char_zero"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_folder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:maxLines="1"
            android:text="@string/folder"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_files_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:maxLines="1"
            android:text="@string/char_zero"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:maxLines="1"
            android:text="@string/file"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </LinearLayout>

    <ListView
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/ll_bottom"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/view"
        android:cacheColorHint="#00000000"
        android:divider="@color/gray_medium"
        android:focusable="true"
        android:focusableInTouchMode="true" />
</RelativeLayout>
