<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/gray_light"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/hint_input_password"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/et_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/bg_white_stroke_gray002_corner_5dp"
        android:gravity="center"
        android:maxLines="1"
        android:singleLine="true"
        android:maxWidth="320dp"
        android:minWidth="224dp"
        android:padding="8dp"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/bt_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/bg_null_stroke_gray004_corner_5dp"
            android:gravity="center"
            android:maxWidth="144dp"
            android:minWidth="72dp"
            android:padding="8dp"
            android:text="@string/cancel"
            android:textSize="16sp" />

        <Button
            android:layout_marginLeft="12dp"
            android:id="@+id/bt_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/bg_null_stroke_gray004_corner_5dp"
            android:gravity="center"
            android:maxWidth="144dp"
            android:minWidth="72dp"
            android:padding="8dp"
            android:text="@string/confirm"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>